Forecast details page

--- a/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/App.xaml
+++ b/Project_2/WeatherXamarim/WeatherXamarim/WeatherXamarim/App.xaml
@@ -10,6 +10,7 @@
             <Color x:Key="PageBackgroundColor">Yellow</Color>
             <Color x:Key="HeadingTextColor">Black</Color>
             <Color x:Key="PrimaryColour">#FE5B00</Color>
+            <Color x:Key="SecondaryColour">#5B0EC8</Color>
             <Style x:Key="LabelPageHeadingStyle" TargetType="Label">
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="HorizontalOptions" Value="Center" />
